Implement real Matchering backend with job-based GCS flow
- Backend: Add real Matchering processing with full settings support
- Backend: Map 25+ frontend settings to Matchering Config
- Backend: Update run_mastering_task to accept settings parameter
- Backend: Add deploy-cloud-run.ps1 deployment script
- Frontend: Create masteringService with complete job-based flow
- Frontend: Add progress tracking (0-100%) with detailed messages
- Frontend: Integrate GCS upload â†’ process â†’ poll â†’ download flow
- Frontend: Update CustomReferenceMastering to use new service
- Frontend: Update GenrePresetsMastering with preset loading
- Frontend: Create presetReferences utility for loading from GCS
- Docs: Add PRESET_REFERENCE_UPLOAD_GUIDE.md with 3 upload methods
- Docs: Add REAL_MATCHERING_IMPLEMENTATION_SUMMARY.md

Replaces simulation code with 100% real Matchering audio processing.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,11 @@
-fastapi
-uvicorn[standard]
-python-multipart
-pydantic
-matchering
-numpy
-scipy
-soundfile
-resampy
-statsmodels
-Flask
-flask-cors
-PyJWT
-cryptography
-python-dotenv
-gunicorn
-google-cloud-storage
-google-cloud-firestore
-google-cloud-pubsub
-google-auth
-requests
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+gunicorn==23.0.0
+python-dotenv==1.0.1
+google-cloud-storage==2.18.2
+google-cloud-firestore==2.19.0
+matchering==2.0.6
+PyJWT==2.9.0
+cryptography==43.0.1
+soundfile>=0.10.3
+pyloudnorm>=0.1.0
