--- a/python-backend/Dockerfile
+++ b/python-backend/Dockerfile
@@ -1,10 +1,15 @@
-# Use Python 3.11 slim image
 FROM python:3.11-slim
+
+# Install system dependencies for audio processing
+RUN apt-get update && apt-get install -y \
+    libsndfile1 \
+    ffmpeg \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -15,5 +20,4 @@ COPY main.py .
 EXPOSE 8080
 
 # Run with gunicorn
-# Cloud Run injects PORT as environment variable, default to 8080 if not set
-CMD exec gunicorn --bind :${PORT:-8080} --workers 1 --threads 8 --timeout 0 main:app
+CMD exec gunicorn --bind :8080 --workers 1 --threads 8 --timeout 300 main:app
