--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -4,3 +4,6 @@ matchering==2.0.6
 soundfile==0.12.1
 librosa==0.10.1
 gunicorn==21.2.0
+supabase==2.0.3
+python-magic-bin==0.4.14
+python-dotenv==1.0.0
