--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "vaul": "^0.9.3",
     "wavesurfer.js": "^7.11.0",
     "web-audio-beat-detector": "^8.2.31",
+    "webmidi": "^3.0.0-alpha.26",
     "zod": "^3.23.8"
   },
   "devDependencies": {
