--- a/python-backend/Dockerfile
+++ b/python-backend/Dockerfile
@@ -4,17 +4,19 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get install -y \
     libsndfile1 \
     ffmpeg \
+    libmagic1 \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
 # Copy requirements and install Python dependencies
-COPY requirements.txt .
+COPY requirements-docker.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY main.py .
+COPY . .
 
 # Expose port
 EXPOSE 8080
