--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.0",
+    "@remix-run/router": "^1.23.2",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.74.0",
@@ -94,7 +95,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.24",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "electron": "^40.1.0",
