--- a/python-backend/.env
+++ b/python-backend/.env
@@ -4,3 +4,6 @@ PAYU_API_KEY="4Vj8eK4rloUd272L48hsrarnUA"
 PAYU_MERCHANT_ID="508029"
 PAYU_ACCOUNT_ID="512321"
 DEV_BYPASS_TOKEN="dev-bypass-token"
+B2_APPLICATION_KEY_ID="0056ee4c648ab0c0000000001"
+B2_APPLICATION_KEY="K005gLtRGHY8CxIqiZlnAlUqt9u28OM"
+B2_BUCKET_NAME="david-sonic-refine-suite"
